--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.16",
     "@mui/lab": "^5.0.0-alpha.149",
-    "@mui/material": "^5.14.14",
+    "@mui/material": "^5.14.16",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.4",
     "next": "13.5.5",
