--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "@mui/material": "^5.14.16",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.4",
-    "next": "13.5.5",
-    "react": "^18",
-    "react-dom": "^18"
+    "next": "^14.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scroll": "^1.9.0"
   },
   "devDependencies": {
     "autoprefixer": "^10",
