--- a/package.json
+++ b/package.json
@@ -14,12 +14,20 @@
     "@mui/icons-material": "^5.14.16",
     "@mui/lab": "^5.0.0-alpha.149",
     "@mui/material": "^5.14.16",
+    "@tabler/icons-react": "^3.26.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.4",
+    "framer-motion": "^11.15.0",
+    "lucide-react": "^0.469.0",
     "next": "^14.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "simplex-noise": "^4.0.3",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
